--- a/src/lowlandtech/wwwroot/manifest.json
+++ b/src/lowlandtech/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "LowlandTech.Client",
-  "short_name": "LowlandTech.Client",
+  "name": "LowlandTech",
+  "short_name": "LowlandTech",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
